# ai-coder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cli.py  main.py  pyproject.toml  run.bat
agent/: __init__.py  hooks.py  loop.py  mcp_client.py  planner.py  prompts.py  tools.py  tui.py
ai_coder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aicoder_cli/: __init__.py
commands/: handlers.py  registry.py
core/: code_index.py  config.py  console.py  context.py  knowledge.py  memory.py  model.py  model_catalog.py  ollama_install.py  pipeline.py  project.py  repl.py  roles.py  streaming.py
devmode/: __init__.py  build.py  phases.py  resync.py  session.py
docs/: architecture.md  dependencies.md  features.md  index.md  support.md
evals/: README.md  __init__.py  benchmark_backends.py  build_review_fixtures.py  consistency_fixtures.py  fixtures.py  rubric.py  run_build_review_eval.py  run_consistency_eval.py  run_eval.py
memory/: __init__.py  project.py
output/task_tracker/: .env  package.json  server.js
output/task_tracker/api/auth/: login.js  profile.js  register.js
output/task_tracker/api/tasks/: create.js  delete.js  read.js  update.js
output/task_tracker/models/: Task.js  User.js
output/task_tracker/pages/: index.js  login.js  register.js  tasks.js
phases/: api_design.py  architecture.py  base.py  codegen.py  competitors.py  frontend.py  idea.py  models.py
rag/: __init__.py  ingest.py  research.py  store.py
specs/: 20260323_001825_task_tracker.md  task_tracker_session.json
tests/: test_agent.py  test_cli.py  test_config.py  test_console.py  test_context.py  test_devmode.py  test_evals.py  test_file_tools.py  test_hooks.py  test_loop.py  test_mcp.py  test_model_catalog.py  test_model_provider.py  test_ollama_install.py  test_planner.py  test_rag_store.py  test_shell_tools.py  test_slash_commands.py  test_tech_tools.py  test_tui.py
tools/: file_tools.py  shell_tools.py  tech_tools.py  web_tools.py
