[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-coder"
version = "3.0.0"
description = "Local, offline agentic coding assistant — plans, edits, runs, and verifies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-ollama>=1.0",
    "langchain-core>=1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "ddgs>=9.0.0",
    "httpx>=0.28",
    "beautifulsoup4>=4.12.0",
    "packaging>=24.0",
    "pathspec>=0.12.0",
    "chromadb>=1.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.scripts]
aicoder = "aicoder_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "tools*", "commands*", "aicoder_cli*", "phases*", "agent*", "rag*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
